REFACTOR : 지인 경조사 상세 조회 `d-day` 반대로 나오는 오류 수정 및 전반적인 코드 리팩토링